<resources>
    <string name="app_name">TRH Unidas</string>
    <string name="take_me_to_rights">take me to rights</string>
    <string name="error_description">La aplicacación necesita Google PlayStore para que las funciones de audio e internet estén disponibles</string>
    <string name="error">Error</string>
    <string name="salir">Salir</string>
    <string name="category_id" />
    <string name="start_progress">Start Progress</string>
    <string name="labour_route_result_link">Ver mi último resultado</string>
    <string name="next">Siguiente</string>
    <string name="choose_at_least_one_option">Es necesario seleccionar al menos una opción</string>

    <string name="second_message_route_labour">Voy a hacerte unas preguntas para identificar si se
        están cumpliendo tus derechos laborales"</string>
    <string name="image_name_route_labour">route_labour_pantalla_inicial</string>
    <string name="description_labour_result">Encontramos incumplimientos a tus derechos laborales:</string>
    <string name="description_labour_result_not_found">No encontramos incumplimientos a tus derechos laborales:</string>
    <string name="description_violence_result">Has sufrido violencia</string>
    <string name="second_message_route_violence">Voy a hacerte unas preguntas para identificar si
        has sufrido violencia</string>
    <string name="additional_recommendations">Recomendaciones adicionales:</string>
    <string name="image_name_route_violence">route_violence_pantalla_inicial</string>


    <string name="about_us_msg_welcome">Te damos la bienvenida a la aplicación TRH UNIDAS</string>
    <string name="about_us_msg_touch_button_audio">Toca este botón para escuchar</string>
    <string name="about_us_msg_press_button_icon_audio">Mantén presionado los botones para
        escucharlos</string>
    <string name="about_us_title_app">Acerca de la aplicación</string>
    <string name="about_us_title_app_section_one">Esta aplicación es un instrumento de apoyo para la
        protección de los derechos de las Trabajadoras Remuneradas del Hogar.
    </string>

    <string name="about_us_title_app_section_two">Es el resultado de un trabajo liderado por la
        Unión Nacional de Trabajadoras del Hogar y Afines (UNTHA), con el acompañamiento de CARE
        Ecuador, la Mesa Interinstitucional por la Defensa de los Derechos de las Trabajadoras
        Remuneradas del Hogar y el apoyo tecnológico de ThoughtWorks Ecuador.
    </string>
    <string name="about_us_title_app_section_three">
        El contenido está basado en las normativas vigentes para noviembre del 2019.
    </string>

    <string name="about_us_title_app_page_three">Encuentra información referente a tus derechos
        como Trabajadora Remunerada del Hogar con las pantallas informativas</string>
    <string name="about_us_title_app_page_fout">Revisa si es que tus derechos laborales se están
        cumpliendo y/o si eres víctima de violencia con las rutas de ayuda</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_instructions">Te damos la bienvenida a la aplicación TRH UNIDAS</string>
    <string name="not_labour_rights_violated">Al parecer no se han registrado faltas a tus derechos laborales.</string>
    <string name="not_violence_suffered">Al parecer no has sido víctima de violencia.</string>
    <string name="home_sindicato_image_name">home_sindicato</string>
    <string name="logo_care_image_name">logo_care</string>
    <string name="logo_mesa_trabajo_name">logo_mesa_trabajo</string>
    <string name="logo_thoughtworks_name">logo_thoughtworks</string>
    <string name="about_us_mesa_trabajo_name">about_us_mesa_trabajo</string>
    <string name="about_us_route_name">about_us_route</string>
    <string name="about_us_audio_name">about_us_audio</string>
    <string name="about_us_touchs_name">about_us_touchs</string>
    <string name="coming_soon">Disponible próximamente</string>
    <string name="link_app">Esta aplicación es un instrumento de apoyo para la protección de los derechos de las Trabajadoras Remuneradas del Hogar. Descarga la aplicación THR Unidas aquí: bit.ly/35iKPbz</string>
    <string name="application_icon">Ícono de la aplicación</string>
    <string name="update">Actualizar</string>
    <string name="dismiss">Descartar</string>
    <string name="startDate">Fecha de inicio de contrato</string>
    <string name="born_date">Fecha de nacimiento</string>
    <string name="endDate">Fecha de fin de contrato</string>
    <string name="description_end_date">Sigo trabajando aquí</string>
    <string name="workday">Jornada laboral</string>
    <string name="descuentos">Descuentos</string>
    <string name="decimo_tercero">Décimo Tercero</string>
    <string name="decimo_cuarto">Décimo Cuarto</string>
    <string name="area">Región donde trabajas</string>
    <string name="salary">Salario mensual</string>
    <string name="vacations">Vacaciones</string>
    <string name="vacations_not_taken">Vacaciones no tomadas</string>
    <string name="desahucio">Desahucio</string>
    <string name="indemnizacion">Indemnizacion*</string>
    <string name="subtotal_finiquito">Sub-Total</string>
    <string name="discounts_finiquito">Descuentos</string>
    <string name="total_finiquito">Total (aproximado)</string>
    <string name="total_description_finiquito">No incluye horas extras</string>
    <string name="benefits_description">Recibo mis beneficios de manera: </string>
    <string name="finiquito_description_result">Estos son los beneficios que debes recibir al terminar el contrato: </string>
    <string name="finiquito_description_salary">Salario último mes</string>
    <string name="btnCalcular">Calcular</string>
    <string name="description">Sin tomar en cuenta descuento del IESS</string>
    <string name="description_workday">Horas trabajadas por semana</string>
    <string name="description_fondos_reserva">A partir de un año trabajado</string>
    <string name="description_vacation">Dias de vacaciones tomados desde ....</string>
    <string name="description_discounts">Pagos adelantados y otros saldos a descontar</string>
    <string name="description_calculators">*Todo cálculo está basado en la normativa vigente para febrero del 2020</string>
    <string name="wrong_date_start">La fecha de inicio ingresada es incorrecta</string>
    <string name="wrong_date_born">La fecha de nacimiento ingresada es incorrecta</string>
    <string name="wrong_date_end">La fecha de fin ingresada es incorrecta</string>
    <string name="wrong_date_trial_period">El límite de periodo de prueba son 15 días, corrija la fecha de fin de contrato</string>
    <string name="wrong_date_compare_dates">La fecha fin no puede ser menor que la fecha de inicio</string>
    <string name="wrong_date_equal_dates">Las fechas no pueden ser iguales</string>
    <string name="wrong_number_of_hours_maximum">Las horas ingresadas no pueden ser mas de 60</string>
    <string name="wrong_salary_zero">La remuneración no puede ser cero </string>
    <string name="wrong_salary_empty">Ingrese la remuneración</string>
    <string name="wrong_number_of_hours_minimun">Ingrese un número de horas </string>
    <string name="wrong_number_of_hours_zero">El número de horas  no puede ser cero </string>
    <string name="wrong_number_of_days_vacations">El número máximo de días de vacaciones tomados no puede exceder de 20</string>
    <string name="percentage_IESS_information">IESS 9,45% (Empleado)</string>
    <string name="pay_fondos_reserva_information">Fondos de reserva</string>
    <string name="pay_fondos_reserva_date">* A partir de 1 año</string>
    <string name="salary_information">Salario a recibir mensual</string>
    <string name="aditional_pays">Pagos adicionales</string>
    <string name="result_decimo_tercero_annual">Décimo tercero</string>
    <string name="result_decimo_cuarto_annual">Décimo cuarto</string>
    <string name="result_decimo_tercero_monthly">Décimo tercero</string>
    <string name="result_decimo_cuarto_monthly">Décimo cuarto</string>
    <string name="tv_mensual">Mensual</string>
    <string name="tv_acumulado">Acumulado</string>
    <string name="calculator_aviso">AVISO: El cálculo del décimo tercer sueldo, es un aproximado, no incluye el valor de horas extras. </string>
    <string name="calculator_information_accumulated">Estos son los valores acumulados hasta la fecha ingresada.</string>
    <string name="calculator_information_monthly">Estos son los valores correspondientes que debes recibir cada mes. </string>
    <string name="calculator_information_causal_bottom">En caso de presiones recibidas o dudas sobre los motivos de terminacion, puedes llamar al 1800-266822  o a la UNTHA (0960639550) </string>
    <string name="calculator_information_compensation_bottom">*Para ser oficialmente sustituta de una persona con discapacidad, debes efectuar el proceso pertinente en el Ministerio de Trabajo </string>
    <string name="calculator_information_finiquito_recommend">RECOMENDACIONES ADICIONALES: </string>
    <string name="notification">AVISO: </string>
</resources>
